--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,5 @@ include 'api'
 include 'services:webservice'
 */
 
-rootProject.name = 'BlazarUserManagement-schema'
+rootProject.name = 'QuoteOfTheDay-schema'
 
